--- a/pag_web.html
+++ b/pag_web.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    >
+    <iframe src="head.html">></iframe>
+    <iframe src="sidebar.html">></iframe>
+    <iframe src="main.html">></iframe>
 </body>
 </html>
